--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>WordPress интенсив</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<section class="header">
+		<div class="container">
+			<img src="icons/logo.png" alt="logo" class="logo_img">
+			<div class="logo_text">WordPress интенсив</div>
+
+			<h1 class="title">Создать свой сайт на WordPress</h1>
+			<h2 class="title_big">это просто!</h2>
+			<h2 class="title">Куда сложнее сделать это правильно!</h2>
+
+			<div class="header_text">Ежедневно в России появляется более 5 000 новых сайтов.
+			И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте
+			на предстоящем двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!</div>
+
+			<button class="header_btn">Записаться на интенсив!</button>
+					
+			<div class="down_text">узнать больше об интенсиве</div>
+			<img src="icons/down.png" alt="down" class="down_img">
+		</div>
+	</section>
 </body>
 </html>
