--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
 			<img src="icons/logo.png" alt="logo" class="logo_img">
 			<div class="logo_text">WordPress интенсив</div>
 
-			<h1 class="title">Создать свой сайт на WordPress</h1>
-			<h2 class="title_big">это просто!</h2>
-			<h2 class="title">Куда сложнее сделать это правильно!</h2>
+			<h1 class="header_title">Создать свой сайт на WordPress</h1>
+			<h2 class="header_title_big">это просто!</h2>
+			<h2 class="header_title">Куда сложнее сделать это правильно!</h2>
 
 			<div class="header_text">Ежедневно в России появляется более 5 000 новых сайтов.
 			И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте
@@ -28,6 +28,33 @@
 					
 			<div class="down_text">узнать больше об интенсиве</div>
 			<img src="icons/down.png" alt="down" class="down_img">
+		</div>
+	</section>
+
+	<section class="wait">
+		<div class="container">
+			<h2 class="wait_title">Что вас ждет в нашем интенсиве?</h2>
+			<div class="wait_divider"></div>
+			<div class="wait_text">2 бесплатных полноценных обучающих вебинара, где:</div>
+
+			<div class="wrap">
+				<div class="wait_item">
+					<img src="icons/pc_icon_1.png" alt="1" class="wait_img">
+					<div class="wait_descr">Всего за два бесплатных вебинара мы научим вас, как создать свой сайт на WordPress.</div>
+				</div>
+				<div class="wait_item">
+					<img src="icons/pc_icon_2.png" alt="2" class="wait_img">
+					<div class="wait_descr">Покажем, как правильно оптимизировать сайт и сделать его привлекательным для поисковых систем. Только свежая,
+					профессиональная и
+					актуальная информация!</div>
+				</div>
+				<div class="wait_item">
+					<img src="icons/pc_icon_3.png" alt="3" class="wait_img">
+					<div class="wait_descr">Вы узнаете, что такое «хорошая индексация»,
+					«высокая посещаемость», «стабильный прирост посетителей», «ТОП по запросам» и, что намного важнее, как добиться всех
+					этих показателей!</div>
+				</div>
+			</div>
 		</div>
 	</section>
 </body>
