--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
 
 	<section class="wait">
 		<div class="container">
-			<h2 class="wait_title">Что вас ждет в нашем интенсиве?</h2>
-			<div class="wait_divider"></div>
+			<h2 class="title">Что вас ждет в нашем интенсиве?</h2>
+			<div class="divider"></div>
 			<div class="wait_text">2 бесплатных полноценных обучающих вебинара, где:</div>
 
 			<div class="wrap">
@@ -53,6 +53,65 @@
 					<div class="wait_descr">Вы узнаете, что такое «хорошая индексация»,
 					«высокая посещаемость», «стабильный прирост посетителей», «ТОП по запросам» и, что намного важнее, как добиться всех
 					этих показателей!</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="optimization">
+		<div class="container">
+			<img class="optimization_img" src="img/woman_bg.jpg" alt="">
+			<h2 class="optimization_title">Что такое оптимизация и зачем она нужна?</h2>
+			<div class="optimization_text">На просторах интернета несчетное количество действующих и даже заброшенных сайтов. Большинство из них совпадает не
+			только по категориям, но и по содержанию.
+			<br><br>
+			Представьте себе тысячи сайтов, на которых тем или иным образом предоставляется одна и та же информация или продается
+			одна и та же услуга. И попасть на эти сайты можно лишь по тематическим запросам в поисковых системах.
+			<br><br>
+			Но как вам быть, если ваш сайт похож на сотню или тысячу таких же, а на одной странице гугла или яндекса всего 10
+			позиций? Как привести посетителей страницы своего ресурса? Именно для этого и нужна оптимизация – для вывода вашего
+			сайта на первую страницу поиска!
+			<br><br>
+			<span>Мы научим вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести его на первые
+			страницы, обходя всех конкурентов.</span></div>
+		</div>
+	</section>
+
+	<section class="finish">
+		<div class="container">
+			<h2 class="title">Что такое оптимизация и зачем она нужна?</h2>
+			<div class="divider"></div>
+
+			<div class="finish_wrap">
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="icons/icon_1.png" alt="1" class="finish_icon">
+					</div>
+					<div class="icon_descr">Создать свой сайт или блог</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="icons/icon_2.png" alt="1" class="finish_icon">
+					</div>
+					<div class="icon_descr">Правильно его оптимизировать</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="icons/icon_3.png" alt="1" class="finish_icon">
+					</div>
+					<div class="icon_descr">Обеспечить ему медленный, но верный рост в ТОП</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="icons/icon_4.png" alt="1" class="finish_icon">
+					</div>
+					<div class="icon_descr">Достигнуть стабильного прироста посетителей</div>
+				</div>
+				<div class="finish_item">
+					<div class="finish_round">
+						<img src="icons/icon_5.png" alt="1" class="finish_icon">
+					</div>
+					<div class="icon_descr">Получать ощутимую прибыль</div>
 				</div>
 			</div>
 		</div>
