--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 			И только единицы из них становятся популярными и приносят ощутимую прибыль. В чем секрет? В чем формула успеха? Узнайте
 			на предстоящем двухдневном <span>БЕСПЛАТНОМ</span> интенсиве!</div>
 
-			<button class="header_btn">Записаться на интенсив!</button>
+			<button class="button">Записаться на интенсив!</button>
 					
 			<div class="down_text">узнать больше об интенсиве</div>
 			<img src="icons/down.png" alt="down" class="down_img">
@@ -116,5 +116,35 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="gift">
+		<div class="container">
+			<img src="icons/gift.png" alt="gift" class="gift_icon">
+
+			<div class="gift_text">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и
+			забирайте свой приз по окончании обучения!</div>
+
+			<button class="button">Записаться на интенсив!</button>
+		</div>
+	</section>
+
+	<section class="action">
+		<div class="container">
+			<img src="icons/pc_icon_4.png" alt="action" class="action_img">
+
+			<div class="title">Первый вебинар состоится:</div>
+
+			<div class="optimization_title">10 сентября в 20:00 по Москве</div>
+
+			<div class="action_text">Успейте записаться, количество мест ограничено! </div>
+		</div>
+	</section>
+
+	<footer class="footer">
+		<div class="container">
+			<div class="footer_text">Служба поддержки | Политика конфиденциальности<br>
+			<span>Позвоните нам 8-800-555-01-21</span></div>
+		</div>
+	</footer>
 </body>
 </html>
